--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -96,7 +96,7 @@ country.bfa           = Burkina Faso
 country.bhr           = Bahrain
 country.bhu           = Bhutan
 country.bih           = Bosnien-Herzeg.
-country.blr           = Belarus
+country.blr           = Wei\u00DFrussland
 country.blz           = Belize
 country.bol           = Bolivien
 country.bot           = Botswana
@@ -171,7 +171,7 @@ country.jor           = Jordanien
 country.jpn           = Japan
 country.kaz           = Kasachstan
 country.ken           = Kenya
-country.kgz           = Kyrgyzstan
+country.kgz           = Kirgisistan
 country.kor           = S\u00FCdkorea
 country.ksa           = Saudiarabien
 country.kuw           = Kuwait
@@ -183,7 +183,7 @@ country.lca           = St. Lucia
 country.les           = Lesotho
 country.lib           = Lebanon
 country.lie           = Liechtenstein
-country.ltu           = Lithuania
+country.ltu           = Litauen
 country.lux           = Luxemburg
 country.lva           = Lettland
 country.mac           = Macau
@@ -231,7 +231,7 @@ country.qat           = Qatar
 country.rou           = Rum\u00E4nien
 country.rsa           = S\u00FCdafrika
 country.rus           = Russland
-country.rwa           = Rwanda
+country.rwa           = Ruanda
 country.sam           = Samoa
 country.sco           = Schottland
 country.sdn           = Sudan
