added page for points frequency

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -455,6 +455,11 @@ navigation.user              = Benutzer
 
 penalty.box.heading = Gewinner nach 11 Meter schie\u00DFen
 
+pointsfrequency.points            = Punkte
+pointsfrequency.table.header.name = Name
+pointsfrequency.title             = Punkteh\u00E4ufigkeit
+pointsfrequency.title2            = Anzahl, wie h\u00E4ufig X Punkte getippt wurden
+
 prices.title = Preise
 
 ranking.list.title = Platzierung
