--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -455,6 +455,11 @@ navigation.user              = User
 
 penalty.box.heading = Winner after penalty shot
 
+pointsfrequency.points            = Points
+pointsfrequency.table.header.name = Name
+pointsfrequency.title             = Points Frequency
+pointsfrequency.title2            = Betting Count of X Points
+
 prices.title = Prices
 
 ranking.list.title = Ranking
