--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -411,7 +411,7 @@ matches.title              = Matches
 
 matchresult.heading = Enter result
 
-misc.title = miscellaneous
+misc.title = Miscellaneous
 
 msg.ROLE_ADMIN                         = Admin user
 msg.ROLE_USER                          = standard user
@@ -433,7 +433,7 @@ msg.user.profile.info.passwordChanged  = Password changed successfully!
 msg.user.profile.info.usernameChanged  = Username was changed sucessfully!
 msg.warn.no.statistics                 = There are no statistics by now!
 
-navigation.activeUserList    = logged in users
+navigation.activeUserList    = Logged In Users
 navigation.administration    = Admin
 navigation.backup            = Database Backup
 navigation.betting           = Betting
