small ajustments points frequency

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -455,6 +455,7 @@ navigation.user              = Benutzer
 
 penalty.box.heading = Gewinner nach 11 Meter schie\u00DFen
 
+pointsfrequency.noData            = Es liegen noch keine Ergebnisse vor!
 pointsfrequency.points            = Punkte
 pointsfrequency.table.header.name = Name
 pointsfrequency.title             = Punkteh\u00E4ufigkeit
