--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -455,6 +455,7 @@ navigation.user              = User
 
 penalty.box.heading = Winner after penalty shot
 
+pointsfrequency.noData            = Currently there are no results!
 pointsfrequency.points            = Points
 pointsfrequency.table.header.name = Name
 pointsfrequency.title             = Points Frequency
