--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -468,7 +468,11 @@ ranking.noRankings = Es wurden noch keine Tipps abgegeben!
 
 rules.title = Regeln
 
-statistics.title = Punkte-Statistik
+statistics.legend.bonusPoints      = Bonus-Punkte
+statistics.legend.favouriteCountry = L\u00E4nder-Favorit
+statistics.legend.flopBetter       = Flop-Tipper
+statistics.legend.topBetter        = Top-Tipper
+statistics.title                   = Punkte-Statistik
 
 systeminfo.title = Systeminformationen
 
