--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -468,7 +468,11 @@ ranking.noRankings = No bets assigned!
 
 rules.title = Rules
 
-statistics.title = points statistic
+statistics.legend.bonusPoints      = Bonus Points
+statistics.legend.favouriteCountry = Country-Favourite
+statistics.legend.flopBetter       = Flop-Better
+statistics.legend.topBetter        = Top-Better
+statistics.title                   = points statistic
 
 systeminfo.title = System Info
 
