splitting runtime configrutation

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -433,25 +433,26 @@ msg.user.profile.info.passwordChanged  = Passwort erfolgreich ge\u00E4ndert!
 msg.user.profile.info.usernameChanged  = Der Benutzername wurde erfolgreich ge\u00E4ndert!
 msg.warn.no.statistics                 = Es liegen noch keine Statistikwerte vor!
 
-navigation.activeUserList    = angemeldete Benutzer
-navigation.administration    = Admin
-navigation.backup            = Datenbank Backup
-navigation.betting           = Tippen
-navigation.betting.extraBets = Bonus-Tipps
-navigation.betting.open      = noch zu tippen
-navigation.changePassword    = Passwort \u00E4ndern
-navigation.changeUsername    = Benutzername \u00E4ndern
-navigation.configuration     = Konfiguration
-navigation.dataCreation      = Datenanlage
-navigation.excelexport       = Excel Export
-navigation.excelimport       = Excel Import
-navigation.info              = Infos
-navigation.lastlogin         = Letzte Logins
-navigation.logout            = Abmelden
-navigation.profileImage      = Profilfoto \u00E4ndern
-navigation.ranking           = Ranking
-navigation.systemInfo        = Systeminformationen
-navigation.user              = Benutzer
+navigation.activeUserList        = angemeldete Benutzer
+navigation.administration        = Admin
+navigation.backup                = Datenbank Backup
+navigation.betting               = Tippen
+navigation.betting.extraBets     = Bonus-Tipps
+navigation.betting.open          = noch zu tippen
+navigation.changePassword        = Passwort \u00E4ndern
+navigation.changeUsername        = Benutzername \u00E4ndern
+navigation.configuration         = Konfiguration
+navigation.dataCreation          = Datenanlage
+navigation.excelexport           = Excel Export
+navigation.excelimport           = Excel Import
+navigation.info                  = Infos
+navigation.lastlogin             = Letzte Logins
+navigation.logout                = Abmelden
+navigation.profileImage          = Profilfoto \u00E4ndern
+navigation.ranking               = Ranking
+navigation.runtime.configuration = Laufzeit-Konfiguration
+navigation.systemInfo            = Systeminformationen
+navigation.user                  = Benutzer
 
 penalty.box.heading = Gewinner nach 11 Meter schie\u00DFen
 
