--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -433,25 +433,26 @@ msg.user.profile.info.passwordChanged  = Password changed successfully!
 msg.user.profile.info.usernameChanged  = Username was changed sucessfully!
 msg.warn.no.statistics                 = There are no statistics by now!
 
-navigation.activeUserList    = Logged In Users
-navigation.administration    = Admin
-navigation.backup            = Database Backup
-navigation.betting           = Betting
-navigation.betting.extraBets = bonus bets
-navigation.betting.open      = not betted yet
-navigation.changePassword    = Changed password!
-navigation.changeUsername    = Change username
-navigation.configuration     = Configuration
-navigation.dataCreation      = Create data
-navigation.excelexport       = Excel Export
-navigation.excelimport       = Excel Import
-navigation.info              = Info
-navigation.lastlogin         = Last logins
-navigation.logout            = Logout
-navigation.profileImage      = Change profile image
-navigation.ranking           = Ranking
-navigation.systemInfo        = System Info
-navigation.user              = User
+navigation.activeUserList        = Logged In Users
+navigation.administration        = Admin
+navigation.backup                = Database Backup
+navigation.betting               = Betting
+navigation.betting.extraBets     = bonus bets
+navigation.betting.open          = not betted yet
+navigation.changePassword        = Changed password!
+navigation.changeUsername        = Change username
+navigation.configuration         = Configuration
+navigation.dataCreation          = Create data
+navigation.excelexport           = Excel Export
+navigation.excelimport           = Excel Import
+navigation.info                  = Info
+navigation.lastlogin             = Last logins
+navigation.logout                = Logout
+navigation.profileImage          = Change profile image
+navigation.ranking               = Ranking
+navigation.runtime.configuration = Runtime Configuration
+navigation.systemInfo            = System Info
+navigation.user                  = User
 
 penalty.box.heading = Winner after penalty shot
 
