users have to change their password at first login

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -479,6 +479,7 @@ systeminfo.title = Systeminformationen
 
 upcoming.matches = anstehende Spiele
 
+user.changePassword.firstLogin               = Sie melden sich das erste mal an. \u00C4ndern zu daher ihr Passwort!
 user.create.child                            = Kind
 user.create.password                         = Passwort
 user.create.roles                            = Rolle
