--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -479,6 +479,7 @@ systeminfo.title = System Info
 
 upcoming.matches = Upcoming Matches
 
+user.changePassword.firstLogin               = This is your first login. Please change your password first!
 user.create.child                            = Child
 user.create.password                         = password
 user.create.roles                            = Role
