making change password on first login configurable

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -30,6 +30,8 @@ administration.msg.info.randomMatchesCreated                             = Zufal
 administration.msg.info.runtimeConfigSaved                               = Konfigurationsparameter wurden gespeichert.
 administration.purgeOldActiveUsers                                       = \u00E4lter als 30 min l\u00F6schen
 administration.runtime.configuration                                     = Konfigurationsparameter
+administration.runtime.configuration.changePasswordOnFirstLogin          = Passwort bei erstem Login \u00E4ndern
+administration.runtime.configuration.changePasswordOnFirstLogin.tooltip  = Diese Einstellung bewirkt, dass neu angelegte Benutzer ihr Passwort nach dem ersten Anmelden \u00E4ndern m\u00FCssen.
 administration.runtime.configuration.createDemoData                      = Testdaten automatisch anlegen
 administration.runtime.configuration.createDemoData.tooltip              = Testdaten beim Systemstart automatisch anlegen
 administration.runtime.configuration.currentTime                         = aktuelle Zeit
@@ -479,7 +481,7 @@ systeminfo.title = Systeminformationen
 
 upcoming.matches = anstehende Spiele
 
-user.changePassword.firstLogin               = Sie melden sich das erste mal an. \u00C4ndern zu daher ihr Passwort!
+user.changePassword.firstLogin               = Sie melden sich das erste mal an. \u00C4ndern Sie daher ihr Passwort!
 user.create.child                            = Kind
 user.create.password                         = Passwort
 user.create.roles                            = Rolle
