--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -30,6 +30,8 @@ administration.msg.info.randomMatchesCreated                             = creat
 administration.msg.info.runtimeConfigSaved                               = Saved runtime configuration.
 administration.purgeOldActiveUsers                                       = purge older than 30 min
 administration.runtime.configuration                                     = Runtime Configuration Settings
+administration.runtime.configuration.changePasswordOnFirstLogin          = Change password at first login
+administration.runtime.configuration.changePasswordOnFirstLogin.tooltip  = Users have to change their password at their first login attempt.
 administration.runtime.configuration.createDemoData                      = Create demo data at startup
 administration.runtime.configuration.createDemoData.tooltip              = Create demo data at system startup automatically
 administration.runtime.configuration.currentTime                         = current time
