added tooltip for auto login

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -388,6 +388,7 @@ language.en = englisch
 
 lastlogins.title = Letzte Logins der Benutzer
 
+login.autologin.tooltip    = Auto-Login bewirkt, dass Sie sich nicht erneut anmelden m\u00FCssen, wenn die Benutzer-Session abgelaufen ist.
 login.button.login         = Anmelden
 login.msg.error            = Ung\u00FCltiger Benutzername oder Passwort!
 login.placeholder.password = Passwort
