--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -388,6 +388,7 @@ language.en = english
 
 lastlogins.title = Last logins of users
 
+login.autologin.tooltip    = With Auto-Login enabled you don\u00B4t have to login yourself again if the user session has been expired.
 login.button.login         = Login
 login.msg.error            = Invalid username or password!
 login.placeholder.password = Password
