using button to reset password

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -72,6 +72,7 @@ button.backToImageUpload = Zur\u00FCck zum Foto Upload
 button.cancel            = Abbrechen
 button.delete            = L\u00F6schen
 button.edit              = \u00C4ndern
+button.password.reset    = Passwort zur\u00FCcksetzen
 button.save              = Speichern
 
 country.afg           = Afghanistan
@@ -502,6 +503,7 @@ user.image.cropping.upload                   = Foto hochladen
 user.list.createUser                         = Benutzer anlegen
 user.list.title                              = Benutzer
 user.not.deletable                           = Der Benutzer mit dem Namen {0} ist als nicht l\u00F6schbar markiert!
+user.password.reset                          = Das Passwort f\u00FCr den Benutzer {0} wurde zur\u00FCckgesetzt!
 user.username.duplicate                      = Dieser Benutzername ist bereits vergeben!
 
 userprofile.changePassword.newPassword       = neues Passwort
