--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -72,6 +72,7 @@ button.backToImageUpload = Back to image upload
 button.cancel            = Cancel
 button.delete            = Delete
 button.edit              = Edit
+button.password.reset    = Password reset
 button.save              = Save
 
 country.afg           = Afghanistan
@@ -502,6 +503,7 @@ user.image.cropping.upload                   = Upload image
 user.list.createUser                         = create user
 user.list.title                              = user
 user.not.deletable                           = The user with name {0} is not deletable!
+user.password.reset                          = The password for user {0} has been reset!
 user.username.duplicate                      = The entered username is already assigned!
 
 userprofile.changePassword.newPassword       = new password
