new password should not be the old one

--- a/src/main/resources/ValidationMessages_en.properties
+++ b/src/main/resources/ValidationMessages_en.properties
@@ -1,6 +1,8 @@
 
-msg.bet.betting.error.passwordMismatch = The new password differs from password repeat!
-msg.input.countries.and.teamNames      = Only country or team names allowed!
-msg.input.same.teams                   = Ein Team kann nicht gegen sich selbst spielen!
-msg.input.teamOne.teamTwo              = Please select a name for team one and team two!
-msg.invalidTeamResult                  = You entered result is invalid!
+msg.bet.betting.error.passwordMismatch      = The new password differs from password repeat!
+msg.input.countries.and.teamNames           = Only country or team names allowed!
+msg.input.same.teams                        = Ein Team kann nicht gegen sich selbst spielen!
+msg.input.teamOne.teamTwo                   = Please select a name for team one and team two!
+msg.invalidTeamResult                       = You entered result is invalid!
+msg.passwordChange.oldAndNewPasswordAreSame = The new password must not be your old one!
+msg.passwordChange.passwordMismatch         = New password does not match repeated one!
