implement joker feature

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -57,14 +57,19 @@ app.dateformatWithSeconds = EEE dd. MMMM yyyy HH:mm:ss
 
 backup.backupFolder = Backup Verzeichnis
 
-bet.edit.heading       = Tipp abgeben
-bet.edit.title         = Spieltipp
-bet.extra.others.title = Bonus-Tipps der anderen...
-bet.list.betted        = getippt
-bet.list.points        = Punkte
-bet.list.title         = Meine Spieletipps
-bet.listOpen.title     = Noch nicht getippt
-bet.others.title       = Tipps der anderen...
+bet.edit.heading         = Tipp abgeben
+bet.edit.title           = Spieltipp
+bet.extra.others.title   = Bonus-Tipps der anderen...
+bet.list.betted          = getippt
+bet.list.points          = Punkte
+bet.list.title           = Meine Spieletipps
+bet.listOpen.title       = Noch nicht getippt
+bet.others.joker.tooltip = Diese Punktzahl kommt durch den Einsatz eines Jokers zustande.
+bet.others.title         = Tipps der anderen...
+
+betting.joker           = Joker verwenden
+betting.joker.available = Du hast bereits {0} von {1} Jokern verwendet.
+betting.joker.tooltip   = Mit dem Einsatz eines Jokers verdoppelst du die Punktzahl des Ergebnisses.
 
 button.back              = zur\u00FCck
 button.backToImageUpload = Zur\u00FCck zum Foto Upload
@@ -424,6 +429,7 @@ msg.bet.betting.created                = Tipp gespeichert!
 msg.bet.betting.error.matchInProgress  = Das Spiel hat bereits begonnen! Keine Tippabgabe mehr m\u00F6glich!
 msg.bet.betting.error.oldPasswordWrong = Das alte Passwort ist falsch!
 msg.bet.betting.info.allBetted         = Derzeit alle Spiele getippt!
+msg.bet.betting.joker.maximum.reached  = Die maximale Anzahl an Jokern ist verbraucht!
 msg.bet.betting.warn.extraBetOpen      = Du hast deinen Bonus-Tipp noch nicht abgegeben!
 msg.input.complete.date.time           = Bitte geben Sie Datum und Uhrzeit ein!
 msg.input.complete.result              = Bitte geben Sie beide Tore an!
