--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -57,14 +57,19 @@ app.dateformatWithSeconds = EEE dd MMMM yyyy HH:mm:ss
 
 backup.backupFolder = Backup Folder
 
-bet.edit.heading       = Enter bet
-bet.edit.title         = match bet
-bet.extra.others.title = bonus bets of the others...
-bet.list.betted        = betted
-bet.list.points        = points
-bet.list.title         = My bettings
-bet.listOpen.title     = matches to bet
-bet.others.title       = bets of the others...
+bet.edit.heading         = Enter bet
+bet.edit.title           = match bet
+bet.extra.others.title   = bonus bets of the others...
+bet.list.betted          = betted
+bet.list.points          = points
+bet.list.title           = My bettings
+bet.listOpen.title       = matches to bet
+bet.others.joker.tooltip = This points have been reached by using a joker.
+bet.others.title         = bets of the others...
+
+betting.joker           = Use Joker
+betting.joker.available = You have been used {0} of {1} jokers.
+betting.joker.tooltip   = You can double your result points by using a joker.
 
 button.back              = Back
 button.backToImageUpload = Back to image upload
@@ -424,6 +429,7 @@ msg.bet.betting.created                = Bet saved!
 msg.bet.betting.error.matchInProgress  = The match has already been started! No bets possible!
 msg.bet.betting.error.oldPasswordWrong = The old password is wrong!
 msg.bet.betting.info.allBetted         = All matches betted!
+msg.bet.betting.joker.maximum.reached  = You used the maximum number of jokers.
 msg.bet.betting.warn.extraBetOpen      = Your bonus betting is still pending!
 msg.input.complete.date.time           = Please enter date and time!
 msg.input.complete.result              = Please enter both goals!
