joker max count is now configurable

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -40,6 +40,8 @@ administration.runtime.configuration.enabledParentChildRanking           = separ
 administration.runtime.configuration.enabledParentChildRanking.tooltip   = separated parent and child ranking
 administration.runtime.configuration.extraBetPoints                      = Points for bonus bets
 administration.runtime.configuration.favouriteCountry                    = Country Favourite
+administration.runtime.configuration.joker                               = Configuration Joker-Bet
+administration.runtime.configuration.jokerMaxCount.title                 = max. Joker Count
 administration.runtime.configuration.passwordForReset                    = Used password after password reset
 administration.runtime.configuration.pointsFinalWinner.title             = Points for champion
 administration.runtime.configuration.pointsSemiFinalWinner.title         = Points for vice champion
