--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -40,6 +40,8 @@ administration.runtime.configuration.enabledParentChildRanking           = getre
 administration.runtime.configuration.enabledParentChildRanking.tooltip   = getrenntes Erwachsenen- und Kinder-Ranking
 administration.runtime.configuration.extraBetPoints                      = Punkte f\u00FCr Bonus Tipps
 administration.runtime.configuration.favouriteCountry                    = L\u00E4nder-Favorit
+administration.runtime.configuration.joker                               = Konfiguration Joker-Tipp
+administration.runtime.configuration.jokerMaxCount.title                 = max. Anzahl Joker
 administration.runtime.configuration.passwordForReset                    = Passwort nach Passwort-Reset
 administration.runtime.configuration.pointsFinalWinner.title             = Punkte f\u00FCr Meister
 administration.runtime.configuration.pointsSemiFinalWinner.title         = Punkte f\u00FCr Vize-Meister
