using bell icon

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -403,6 +403,8 @@ login.placeholder.username = Username
 login.title                = Login
 login.title.short          = Login
 
+match.joker.tooltip        = Joker Bet
+
 matches.form.chooseCountry = Country selection
 matches.form.group         = group
 matches.form.kickOff       = Kick-Off
