--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -66,7 +66,7 @@ bet.list.betted          = betted
 bet.list.points          = points
 bet.list.title           = My bettings
 bet.listOpen.title       = matches to bet
-bet.others.joker.tooltip = This points have been reached by using a joker.
+bet.others.joker.tooltip = Joker-Bet (double points)
 bet.others.title         = bets of the others...
 
 betting.joker           = Use Joker
