--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -66,7 +66,7 @@ bet.list.betted          = getippt
 bet.list.points          = Punkte
 bet.list.title           = Meine Spieletipps
 bet.listOpen.title       = Noch nicht getippt
-bet.others.joker.tooltip = Diese Punktzahl kommt durch den Einsatz eines Jokers zustande.
+bet.others.joker.tooltip = Tipp mit Joker (Verdoppelung der Punkte)
 bet.others.title         = Tipps der anderen...
 
 betting.joker           = Joker verwenden
