--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -426,9 +426,9 @@ matchresult.heading = Ergebnis eintragen
 misc.title = Sonstiges
 
 msg.ROLE_ADMIN                         = Admin Benutzer
+msg.ROLE_SUB_ADMIN                     = + Eingabe Ergeb. und Benutzeradm.
 msg.ROLE_USER                          = normaler Benutzer
 msg.ROLE_USER_ENTER_RESULTS            = + Eingabe Ergebnisse
-msg.ROLE_USER_ENTER_RESULTS_ADD_USERS  = + Eingabe Ergeb. und Benutzeradm.
 msg.bet.betting.created                = Tipp gespeichert!
 msg.bet.betting.error.matchInProgress  = Das Spiel hat bereits begonnen! Keine Tippabgabe mehr m\u00F6glich!
 msg.bet.betting.error.oldPasswordWrong = Das alte Passwort ist falsch!
@@ -491,31 +491,31 @@ systeminfo.title = Systeminformationen
 
 upcoming.matches = anstehende Spiele
 
-user.changePassword.firstLogin                      = Sie melden sich das erste mal an. \u00C4ndern Sie daher ihr Passwort!
-user.create.child                                   = Kind
-user.create.password                                = Passwort
-user.create.roles                                   = Rolle
-user.create.title                                   = Benutzer anlegen
-user.create.username                                = Benutzername
-user.created                                        = Der Benutzer {0} wurde angelegt!
-user.deleted                                        = Der Benutzer {0} wurde gel\u00F6scht!
-user.deleted.couldNotDeleteOwnUser                  = Der eigene Benutzer kann nicht gel\u00F6scht werden!
-user.edit.title                                     = Benutzer bearbeiten
-user.edit.tooltip.ROLE_ADMIN                        = Die Administrator Rolle hat alle Berechtigungen.
-user.edit.tooltip.ROLE_USER                         = Dies ist die Standard Rolle f\u00FCr Benutzer, die Spiele tippen d\u00FCrfen.
-user.edit.tooltip.ROLE_USER_ENTER_RESULTS           = Standard Rolle mit der Berechtigung Ergebnisse einzutragen.
-user.edit.tooltip.ROLE_USER_ENTER_RESULTS_ADD_USERS = Standard Rolle mit der Berechtigung Ergebnisse einzutragen und Benutzer zu administrieren.
-user.edit.username                                  = Benutzername
-user.edited                                         = Der Benutzer {0} wurde aktualisiert!
-user.image.cropping.result                          = Ergebnis
-user.image.cropping.select.range                    = Ausschnitt ausw\u00E4hlen
-user.image.cropping.title                           = Profilbild \u00E4ndern
-user.image.cropping.upload                          = Foto hochladen
-user.list.createUser                                = Benutzer anlegen
-user.list.title                                     = Benutzer
-user.not.deletable                                  = Der Benutzer mit dem Namen {0} ist als nicht l\u00F6schbar markiert!
-user.password.reset                                 = Das Passwort f\u00FCr den Benutzer {0} wurde zur\u00FCckgesetzt!
-user.username.duplicate                             = Dieser Benutzername ist bereits vergeben!
+user.changePassword.firstLogin               = Sie melden sich das erste mal an. \u00C4ndern Sie daher ihr Passwort!
+user.create.child                            = Kind
+user.create.password                         = Passwort
+user.create.roles                            = Rolle
+user.create.title                            = Benutzer anlegen
+user.create.username                         = Benutzername
+user.created                                 = Der Benutzer {0} wurde angelegt!
+user.deleted                                 = Der Benutzer {0} wurde gel\u00F6scht!
+user.deleted.couldNotDeleteOwnUser           = Der eigene Benutzer kann nicht gel\u00F6scht werden!
+user.edit.title                              = Benutzer bearbeiten
+user.edit.tooltip.ROLE_ADMIN                 = Die Administrator Rolle hat alle Berechtigungen.
+user.edit.tooltip.ROLE_SUB_ADMIN             = Standard Rolle mit der Berechtigung Ergebnisse einzutragen und Benutzer zu administrieren.
+user.edit.tooltip.ROLE_USER                  = Dies ist die Standard Rolle f\u00FCr Benutzer, die Spiele tippen d\u00FCrfen.
+user.edit.tooltip.ROLE_USER_ENTER_RESULTS    = Standard Rolle mit der Berechtigung Ergebnisse einzutragen.
+user.edit.username                           = Benutzername
+user.edited                                  = Der Benutzer {0} wurde aktualisiert!
+user.image.cropping.result                   = Ergebnis
+user.image.cropping.select.range             = Ausschnitt ausw\u00E4hlen
+user.image.cropping.title                    = Profilbild \u00E4ndern
+user.image.cropping.upload                   = Foto hochladen
+user.list.createUser                         = Benutzer anlegen
+user.list.title                              = Benutzer
+user.not.deletable                           = Der Benutzer mit dem Namen {0} ist als nicht l\u00F6schbar markiert!
+user.password.reset                          = Das Passwort f\u00FCr den Benutzer {0} wurde zur\u00FCckgesetzt!
+user.username.duplicate                      = Dieser Benutzername ist bereits vergeben!
 
 userprofile.changePassword.newPassword       = neues Passwort
 userprofile.changePassword.newPasswordRepeat = neues Passwort wiederholen
