--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -426,9 +426,9 @@ matchresult.heading = Enter result
 misc.title = Miscellaneous
 
 msg.ROLE_ADMIN                         = Admin user
+msg.ROLE_SUB_ADMIN                     = standard user entering results, user adm.
 msg.ROLE_USER                          = standard user
 msg.ROLE_USER_ENTER_RESULTS            = standard user with entering results
-msg.ROLE_USER_ENTER_RESULTS_ADD_USERS  = standard user entering results, user adm.
 msg.bet.betting.created                = Bet saved!
 msg.bet.betting.error.matchInProgress  = The match has already been started! No bets possible!
 msg.bet.betting.error.oldPasswordWrong = The old password is wrong!
@@ -491,31 +491,31 @@ systeminfo.title = System Info
 
 upcoming.matches = Upcoming Matches
 
-user.changePassword.firstLogin                      = This is your first login. Please change your password first!
-user.create.child                                   = Child
-user.create.password                                = password
-user.create.roles                                   = Role
-user.create.title                                   = Create user
-user.create.username                                = username
-user.created                                        = The user {0} has been deleted!
-user.deleted                                        = The user {0} has been deleted!
-user.deleted.couldNotDeleteOwnUser                  = The own user could not be deleted!
-user.edit.title                                     = edit user
-user.edit.tooltip.ROLE_ADMIN                        = The administrator role has all permissions.
-user.edit.tooltip.ROLE_USER                         = This is the default role for the most users which are betting for matches only.
-user.edit.tooltip.ROLE_USER_ENTER_RESULTS           = Default role with the additional permission to enter results.
-user.edit.tooltip.ROLE_USER_ENTER_RESULTS_ADD_USERS = Default role with the additional permission to enter results and administrate users.
-user.edit.username                                  = username
-user.edited                                         = The user {0} has been updated!
-user.image.cropping.result                          = Result
-user.image.cropping.select.range                    = extract image
-user.image.cropping.title                           = Change profile image
-user.image.cropping.upload                          = Upload image
-user.list.createUser                                = create user
-user.list.title                                     = user
-user.not.deletable                                  = The user with name {0} is not deletable!
-user.password.reset                                 = The password for user {0} has been reset!
-user.username.duplicate                             = The entered username is already assigned!
+user.changePassword.firstLogin               = This is your first login. Please change your password first!
+user.create.child                            = Child
+user.create.password                         = password
+user.create.roles                            = Role
+user.create.title                            = Create user
+user.create.username                         = username
+user.created                                 = The user {0} has been deleted!
+user.deleted                                 = The user {0} has been deleted!
+user.deleted.couldNotDeleteOwnUser           = The own user could not be deleted!
+user.edit.title                              = edit user
+user.edit.tooltip.ROLE_ADMIN                 = The administrator role has all permissions.
+user.edit.tooltip.ROLE_SUB_ADMIN             = Default role with the additional permission to enter results and administrate users.
+user.edit.tooltip.ROLE_USER                  = This is the default role for the most users which are betting for matches only.
+user.edit.tooltip.ROLE_USER_ENTER_RESULTS    = Default role with the additional permission to enter results.
+user.edit.username                           = username
+user.edited                                  = The user {0} has been updated!
+user.image.cropping.result                   = Result
+user.image.cropping.select.range             = extract image
+user.image.cropping.title                    = Change profile image
+user.image.cropping.upload                   = Upload image
+user.list.createUser                         = create user
+user.list.title                              = user
+user.not.deletable                           = The user with name {0} is not deletable!
+user.password.reset                          = The password for user {0} has been reset!
+user.username.duplicate                      = The entered username is already assigned!
 
 userprofile.changePassword.newPassword       = new password
 userprofile.changePassword.newPasswordRepeat = new password repeat
