--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -126,7 +126,7 @@ country.cmr           = Kamerun
 country.cod           = Kongo DR
 country.cok           = Cook-Inseln
 country.col           = Kolumbien
-country.com           = Comoros
+country.com           = Komoren
 country.cpv           = Kap Verde
 country.crc           = Costa Rica
 country.cta           = Zent. Afr. Republik
@@ -151,9 +151,9 @@ country.fij           = Fiji
 country.fin           = Finland
 country.fra           = Frankreich
 country.fro           = Faroe-Inseln
-country.gab           = Gabon
+country.gab           = Gabun
 country.gam           = Gambia
-country.geo           = Georgia
+country.geo           = Georgien
 country.gha           = Ghana
 country.gib           = Gibraltar
 country.gnb           = Guinea Bisseau
@@ -179,7 +179,7 @@ country.jam           = Jamaika
 country.jor           = Jordanien
 country.jpn           = Japan
 country.kaz           = Kasachstan
-country.ken           = Kenya
+country.ken           = Kenia
 country.kgz           = Kirgisistan
 country.kor           = S\u00FCdkorea
 country.ksa           = Saudiarabien
@@ -190,7 +190,7 @@ country.lbr           = Liberien
 country.lby           = Libyen
 country.lca           = St. Lucia
 country.les           = Lesotho
-country.lib           = Lebanon
+country.lib           = Libanon
 country.lie           = Liechtenstein
 country.ltu           = Litauen
 country.lux           = Luxemburg
@@ -199,14 +199,14 @@ country.mac           = Macau
 country.mad           = Madagaskar
 country.mar           = Morokko
 country.mas           = Malaysia
-country.mda           = Moldova
+country.mda           = Moldawien
 country.mdv           = Malediven
 country.mex           = Mexiko
 country.mkd           = FYR Mazedonien
 country.mli           = Mali
 country.mlt           = Malta
 country.mne           = Montenegro
-country.mng           = Mongolia
+country.mng           = Mongolei
 country.moz           = Mozambique
 country.msr           = Montserrat
 country.mtn           = Mauritanien
@@ -251,12 +251,12 @@ country.skn           = St. Kitts und Nevis
 country.sle           = Sierra Leone
 country.slv           = El Salvador
 country.smr           = San Marino
-country.sol           = Solomon Islands
+country.sol           = Salomonen
 country.som           = Somalia
 country.srb           = Serbien
 country.sri           = Sri Lanka
 country.ssd           = S\u00FCdsudan
-country.stp           = Sao Tome e Principe
+country.stp           = S\u00E3o Tom\u00E9 und Pr\u00EDncipe
 country.sur           = Suriname
 country.svk           = Slovakei
 country.swe           = Schweden
@@ -264,12 +264,12 @@ country.swz           = Swaziland
 country.syr           = Syrien
 country.tah           = Tahiti
 country.tan           = Tanzania
-country.tca           = Turks und Caicos
+country.tca           = Turks- und Caicosinseln
 country.tga           = Tonga
 country.tha           = Thailand
 country.tjk           = Tajikistan
 country.tkm           = Turkmenistan
-country.tls           = Timor Leste
+country.tls           = Timor-Leste
 country.tog           = Togo
 country.tpe           = Chinese Taipei
 country.tri           = Trinidad + Tobago
