added joker match listing

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -390,6 +390,8 @@ info.misc.edit.button   = Sonstiges editieren
 info.prices.edit.button = Preise editieren
 info.rules.edit.button  = Regeln editieren
 
+joker.matches = Spiele mit Joker
+
 language.de = deutsch
 language.en = englisch
 
