--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -390,6 +390,8 @@ info.misc.edit.button   = edit miscellaneous
 info.prices.edit.button = edit winnings
 info.rules.edit.button  = edit rules
 
+joker.matches = Joker Matches
+
 language.de = german
 language.en = english
 
