changed default validation message

--- a/src/main/resources/ValidationMessages_en.properties
+++ b/src/main/resources/ValidationMessages_en.properties
@@ -1,4 +1,6 @@
 
+javax.validation.constraints.NotNull.message = must not be empty
+
 msg.bet.betting.error.passwordMismatch      = The new password differs from password repeat!
 msg.input.countries.and.teamNames           = Only country or team names allowed!
 msg.input.same.teams                        = Ein Team kann nicht gegen sich selbst spielen!
