--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -394,6 +394,7 @@ joker.matches = Joker Matches
 
 language.de = german
 language.en = english
+language.pl = polish
 
 lastlogins.title = Last logins of users
 
