--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -394,6 +394,7 @@ joker.matches = Spiele mit Joker
 
 language.de = deutsch
 language.en = englisch
+language.pl = polnisch
 
 lastlogins.title = Letzte Logins der Benutzer
 
